--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "cookie-parser": "^1.3.5",
     "morgan": "^1.6.1",
     "react": "^0.13.3",
+    "react-helmet": "^1.1.0",
     "react-router": "^0.13.3",
     "require-dir": "^0.3.0",
     "serve-favicon": "^2.3.0"
@@ -45,6 +46,7 @@
     "gulp-babel": "^5.2.0",
     "gulp-changed": "^1.3.0",
     "gulp-if": "^1.2.5",
+    "gulp-nodemon": "^2.0.3",
     "gulp-webpack": "^1.5.0",
     "react-hot-loader": "^1.2.8",
     "run-sequence": "^1.1.2",
