--- a/package.json
+++ b/package.json
@@ -41,15 +41,22 @@
   "devDependencies": {
     "babel-core": "^5.8.21",
     "babel-loader": "^5.3.2",
+    "browser-sync": "^2.8.2",
+    "css-loader": "^0.15.6",
     "del": "^1.2.0",
     "gulp": "^3.9.0",
     "gulp-babel": "^5.2.0",
     "gulp-changed": "^1.3.0",
+    "gulp-concat": "^2.6.0",
     "gulp-if": "^1.2.5",
+    "gulp-less": "^3.0.3",
     "gulp-nodemon": "^2.0.3",
     "gulp-webpack": "^1.5.0",
+    "less": "^2.5.1",
+    "less-loader": "^2.2.0",
     "react-hot-loader": "^1.2.8",
     "run-sequence": "^1.1.2",
+    "style-loader": "^0.12.3",
     "webpack": "^1.11.0",
     "webpack-dev-server": "^1.10.1",
     "yargs": "^3.18.0"
