support livereload of less files

--- a/.jscsrc
+++ b/.jscsrc
@@ -8,6 +8,10 @@
     "build/**",
     "src/**/public/**"
   ],
+  "maximumLineLength": {
+    "value": 80,
+    "allExcept": ["comments", "urlComments", "require"]
+  },
   "requireCapitalizedComments": null,
   "requireSemicolons": true
 }
