--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "homepage": "https://github.com/gocreating/seed",
   "dependencies": {
+    "alt": "^0.17.1",
     "babel": "^5.8.21",
     "body-parser": "^1.13.3",
     "cookie-parser": "^1.3.5",
