--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "react-helmet": "^1.1.0",
     "react-router": "^0.13.3",
     "require-dir": "^0.3.0",
-    "serve-favicon": "^2.3.0"
+    "sequelize": "^3.5.1",
+    "serve-favicon": "^2.3.0",
+    "sqlite3": "^3.0.10"
   },
   "devDependencies": {
     "babel-core": "^5.8.21",
