--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "body-parser": "^1.13.3",
     "cookie-parser": "^1.3.5",
     "express": "^4.13.3",
+    "jquery": "^2.1.4",
     "morgan": "^1.6.1",
     "react": "^0.13.3",
     "react-helmet": "^1.1.0",
