--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react": "^0.13.3",
     "react-helmet": "^1.1.0",
     "react-router": "^0.13.3",
+    "react-tab-panel": "^1.0.4",
     "require-dir": "^0.3.0",
     "sequelize": "^3.5.1",
     "serve-favicon": "^2.3.0",
