--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "require-dir": "^0.3.0",
     "sequelize": "^3.5.1",
     "serve-favicon": "^2.3.0",
-    "sqlite3": "^3.0.10"
+    "sqlite3": "^3.0.10",
+    "superagent": "^1.3.0"
   },
   "devDependencies": {
     "babel-core": "^5.8.21",
