--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "jquery": "^2.1.4",
     "morgan": "^1.6.1",
     "react": "^0.13.3",
+    "react-bootstrap": "^0.24.5",
     "react-helmet": "^1.1.0",
     "react-router": "^0.13.3",
     "react-tab-panel": "^1.0.4",
