--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
   "homepage": "https://github.com/gocreating/seed",
   "dependencies": {
     "alt": "^0.17.1",
+    "async": "^1.4.2",
     "babel": "^5.8.21",
     "body-parser": "^1.13.3",
+    "colors": "^1.1.2",
     "cookie-parser": "^1.3.5",
     "express": "^4.13.3",
     "jquery": "^2.1.4",
