--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "npm run jscs && npm run build && npm run mocha",
-    "jscs": "jscs --verbose .",
+    "jscs": "jscs --verbose ./src",
     "build": "gulp init -t && gulp build -t",
     "mocha": "mocha build/test/test/spec.js"
   },
@@ -44,6 +44,7 @@
     "require-dir": "^0.3.0",
     "sequelize": "^3.5.1",
     "serve-favicon": "^2.3.0",
+    "source-map-support": "^0.3.2",
     "sqlite3": "^3.0.10",
     "superagent": "^1.3.0"
   },
@@ -63,6 +64,7 @@
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-webpack": "^1.5.0",
+    "jscs": "^2.1.0",
     "less": "^2.5.1",
     "less-loader": "^2.2.0",
     "react-hot-loader": "^1.2.8",
