--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "gulp-if": "^1.2.5",
     "gulp-less": "^3.0.3",
     "gulp-nodemon": "^2.0.3",
+    "gulp-preprocess": "^1.2.0",
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-webpack": "^1.5.0",
