--- a/package.json
+++ b/package.json
@@ -55,15 +55,19 @@
     "css-loader": "^0.15.6",
     "del": "^1.2.0",
     "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^2.3.1",
     "gulp-babel": "^5.2.0",
     "gulp-changed": "^1.3.0",
     "gulp-concat": "^2.6.0",
     "gulp-if": "^1.2.5",
     "gulp-less": "^3.0.3",
+    "gulp-minify-css": "^1.2.1",
     "gulp-nodemon": "^2.0.3",
+    "gulp-notify": "^2.2.0",
     "gulp-preprocess": "^1.2.0",
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^1.5.2",
+    "gulp-uglify": "^1.3.0",
     "gulp-webpack": "^1.5.0",
     "jscs": "^2.1.0",
     "less": "^2.5.1",
