--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   "dependencies": {
     "alt": "^0.17.1",
     "async": "^1.4.2",
-    "babel": "^5.8.21",
+    "babel": "^5.8.23",
     "body-parser": "^1.13.3",
     "cookie-parser": "^1.3.5",
     "express": "^4.13.3",
@@ -68,10 +68,12 @@
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^1.3.0",
+    "gulp-util": "^3.0.6",
     "gulp-webpack": "^1.5.0",
     "jscs": "^2.1.0",
     "less": "^2.5.1",
     "less-loader": "^2.2.0",
+    "merge-stream": "^1.0.0",
     "react-hot-loader": "^1.2.8",
     "run-sequence": "^1.1.2",
     "style-loader": "^0.12.3",
