migrate from `react-router` to `react-router-component`

--- a/package.json
+++ b/package.json
@@ -37,9 +37,11 @@
     "jquery": "^2.1.4",
     "morgan": "^1.6.1",
     "react": "^0.13.3",
+    "react-async": "^2.1.0",
     "react-bootstrap": "^0.24.5",
     "react-helmet": "^1.1.0",
     "react-router": "^0.13.3",
+    "react-router-component": "^0.26.0",
     "react-tab-panel": "^1.0.4",
     "require-dir": "^0.3.0",
     "sequelize": "^3.5.1",
