--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "cookie-parser": "^1.3.5",
     "express": "^4.13.3",
     "jquery": "^2.1.4",
+    "jwt-simple": "^0.3.1",
+    "moment": "^2.10.6",
     "morgan": "^1.6.1",
     "react": "^0.13.3",
     "react-async": "^2.1.0",
