--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "babel-core": "^5.8.21",
     "babel-loader": "^5.3.2",
     "browser-sync": "^2.8.2",
+    "chai": "^3.3.0",
     "css-loader": "^0.15.6",
     "del": "^1.2.0",
     "gulp": "^3.9.0",
@@ -66,6 +67,7 @@
     "gulp-if": "^1.2.5",
     "gulp-less": "^3.0.3",
     "gulp-minify-css": "^1.2.1",
+    "gulp-mocha": "^2.1.3",
     "gulp-nodemon": "^2.0.3",
     "gulp-notify": "^2.2.0",
     "gulp-preprocess": "^1.2.0",
@@ -81,6 +83,7 @@
     "react-hot-loader": "^1.2.8",
     "run-sequence": "^1.1.2",
     "style-loader": "^0.12.3",
+    "superagent": "^1.4.0",
     "webpack": "^1.11.0",
     "webpack-dev-server": "^1.10.1",
     "yargs": "^3.18.0"
