--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "gulp-babel": "^5.2.0",
     "gulp-changed": "^1.3.0",
     "gulp-concat": "^2.6.0",
+    "gulp-exec": "^2.1.1",
     "gulp-if": "^1.2.5",
     "gulp-less": "^3.0.3",
     "gulp-minify-css": "^1.2.1",
