temporarily register function

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "jwt-simple": "^0.3.1",
     "moment": "^2.10.6",
     "morgan": "^1.6.1",
+    "object-assign": "^4.0.1",
     "react": "^0.13.3",
     "react-async": "^2.1.0",
     "react-bootstrap": "^0.24.5",
